fix: scroll restoration on mobile

--- a/assets/css/extended/footer.css
+++ b/assets/css/extended/footer.css
@@ -1,6 +1,7 @@
 .paginavbar {
     display: flex;
     justify-content: space-between;
+    gap: 6rem;
 }
 
 .paginavbar .prev {
