--- a/assets/css/extended/menu.css
+++ b/assets/css/extended/menu.css
@@ -1,21 +1,3 @@
-.submenu {
-    background-color: #ffff;
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    list-style: none;
-    word-break: keep-all;
-    overflow-x: auto;
-    gap: 15px;
-    white-space: nowrap;
-    z-index: 1;
-    line-height: normal;
-    border: solid;
-    /* border: 0.5em double #32a1ce; */
-
-    transform: translate(-20px, 10px);
-}
-
 .menu {
     list-style-type: none;
     flex-shrink: 0;
@@ -43,10 +25,6 @@
     display: block;
 }
 
-.menu:not(.open) li:has(a.active) {
-    display: block;
-}
-
 a.active {
     /* text-decoration: var(--underline-theme);
     text-underline-offset: var(--underline-theme-offset);
@@ -71,9 +49,10 @@ a.active {
         flex-wrap: wrap;
     }
 
-    .menu li:not(.menu-toggle) {
+    .menu:not(.open) li:not(.menu-toggle):not(.active) {
         display: none;
     }
+
     .content {
         position: relative;
     }
